force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/NPS_Case_Escalation_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Cases for NPS which have a low score will be escalated via email. This object keeps the mapping between the Area Manager (Case Owner) and the users who will receive the email.</description>
    <label>NPS Case Escalation Hierarchy</label>
    <nameField>
        <label>NPS Case Escalation Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Case Escalation Hierarchies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>