force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Area Manager is the case owner who is handling the NPS Case.</inlineHelpText>
    <label>Area Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Case_Escalation_Hierarchies3W04</relationshipName>
    <type>Lookup</type>
</CustomField>