force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/fields/First_Level_Cc_1__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Cc_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Level CC Recipient 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Case_Escalation_Hierarchies8</relationshipName>
    <type>Lookup</type>
</CustomField>