force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/fields/First_Level_To__c.field-meta.xml
<CustomField>
    <fullName>First_Level_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The 1st escalation email will be addressed to this user.</inlineHelpText>
    <label>1st Level Primary Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Case_Escalation_hierarchies1</relationshipName>
    <type>Lookup</type>
</CustomField>