force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/fields/Second_Level_Cc_10__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Cc_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Level CC Recipient 10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Case_Escalation_Hierarchies4DOo</relationshipName>
    <type>Lookup</type>
</CustomField>