force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/fields/Second_Level_To__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The 2nd escalation email will be addressed to this user.</inlineHelpText>
    <label>2nd Level Primary Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Case_Escalation_hierarchies2</relationshipName>
    <type>Lookup</type>
</CustomField>