force-app/main/default/objects/NPS_Case_Escalation_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area_Manager__c</columns>
    <columns>First_Level_To__c</columns>
    <columns>Second_Level_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>